--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "next": "10.x",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "tailwind": "^4.0.0"
+  },
+  "devDependencies": {
+    "prettier": "2.3.2"
   }
 }
