--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-gtm-module": "^2.0.11",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.0",
     "prettier": "2.3.2"
   }
 }
