--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.17.3",
+    "npm": ">=7.20.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +16,9 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
@@ -19,11 +26,14 @@
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.0",
-    "prettier": "2.3.2"
+    "postcss": "^8.3.6",
+    "prettier": "2.3.2",
+    "tailwindcss": "^2.2.7"
   }
 }
